--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "gridsome build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.1.0",
     "gridsome": "^0.7.0"
   }
 }
