--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "gridsome": "^0.7.0"
   }
