--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@gridsome/source-strapi": "^0.2.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "highlight.js": "^11.2.0",
+    "markdown-it": "^12.2.0",
+    "markdown-it-replace-link": "^1.1.0"
   }
 }
